# ember-shared

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ember_shared/: __init__.py  errors.py  logging.py  models.py  settings.py
tests/: test_errors.py  test_logging.py  test_models.py  test_settings.py
