[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ember-bio-shared"
version = "0.1.1"
description = "Shared settings, logging, base models, and error types for Ember Bio"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ember_shared"]
